--- a/root/index.html
+++ b/root/index.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-md-12">
       <h1>Not a Google Form</h1>
-      <script src="script.js">
+       <script type="text/javascript">
         window.submitted = false;
       </script>
       <iframe id="hiddenIframe" name="hiddenIframe" onload="if(window.submitted||false){alert('Response saved. You may navigate away now');}"
