--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
       <div class="container">
         <form action="https://docs.google.com/forms/d/e/1FAIpQLSer6xWgxeYXYd7VgBya6akLhPws-FbNIiOw9lA5-pBAeuj8KA/formResponse" onsubmit="window.submitted=true;" target="hiddenIframe" method="POST">
           <div class="form-group row">            
-            <div class="col-xs-10">
+            <div class="col-xs-8">
               <input type="text" size="1" style="color:white" name="entry.1472329944" ng-model="vm.response" ng-required="true" id="inputStatus" readonly/>                
               <div editable-table form-instance="formInstance" data="vm.data" options="vm.options" heading="">
             </div>
           </div>
           <div class="form-group row">
-            <div class="offset-xs-2 col-xs-10">
+            <div class="offset-xs-2 col-xl-10">
               <button type="submit" ng-disabled="!vm.submitEnabled" class="btn btn-primary">Submit</button>
             </div>
           </div>
